--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,20 +1,23 @@
 server.port=8090
 spring.application.name=holigo-payment-service
-spring.datasource.url=jdbc:h2:mem:payment_method;MODE=MYSQL;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.datasource.url=jdbc:mysql://localhost:3306/payment_service?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Jakarta
+# spring.datasource.url=jdbc:h2:mem:payment_method;MODE=MYSQL;DB_CLOSE_DELAY=-1
+# spring.datasource.username=sa
+# spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.artemis.broker-url=tcp://localhost:61616
+spring.artemis.broker-url=tcp://10.1.1.15:61616
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.zipkin.base-url=http://localhost:9411/
+spring.zipkin.base-url=http://10.1.1.15:9411/
 
-eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://netflix:eureka@10.1.1.15:8761/eureka
 eureka.instance.prefer-ip-address=true
 spring.cloud.inetutils.timeout-seconds=10
 
