--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>id.holigo.services</groupId>
 	<artifactId>holigo-payment-service</artifactId>
-	<version>1.4.1</version>
+	<version>1.4.3</version>
 	<name>holigo-payment-service</name>
 	<description>Holigo payment method service</description>
 	<properties>
@@ -102,6 +102,11 @@
 			<groupId>org.springframework.statemachine</groupId>
 			<artifactId>spring-statemachine-core</artifactId>
 			<version>${spring-statemachine.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.0.1</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
