--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -16,6 +16,7 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 spring.zipkin.base-url=http://10.1.1.15:9411/
+spring.zipkin.enabled=true
 
 eureka.client.service-url.defaultZone=http://netflix:eureka@10.1.1.15:8761/eureka
 eureka.instance.prefer-ip-address=true
