Fixed created payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ eureka.client.service-url.defaultZone=http://netflix:eureka@10.1.1.15:8761/eurek
 eureka.instance.prefer-ip-address=true
 
 logging.level.root=INFO
+server.error.include-stacktrace=never
