--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.artemis.broker-url=tcp://10.1.1.15:61616
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
+spring.kafka.bootstrap-servers=10.1.1.15:9092
+
 spring.zipkin.base-url=http://10.1.1.15:9411/
 spring.zipkin.enabled=true
 
